[package]
name = "pur-isgay-fyi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.19" }
yew-router = "0.16.0"
gloo-net = "0.2.4"
gloo-utils = "0.1.5"
pulldown-cmark = { version = "0.9.2" }
